--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,8 @@
 
 #home{
   background-image: url(../images/home.svg);
+  background-repeat: no-repeat;
+  background-size: cover;
   height: 90vh;
   background-position: bottom;
 }
@@ -147,7 +149,97 @@
   color: var(--melon);
 }
 
-.menu{
+/* Menu Hamburguesa */
+
+#nav-icon3 {
+  width: 45px;
+  height: 35px;
+  position: relative;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .5s ease-in-out;
+  -moz-transition: .5s ease-in-out;
+  -o-transition: .5s ease-in-out;
+  transition: .5s ease-in-out;
+  cursor: pointer;
+  z-index: 5;
+  display: none;
+}
+
+#nav-icon3 span {
+  display: block;
+  position: absolute;
+  height: 6px;
+  width: 100%;
+  background: #fff;
+  border-radius: 4px;
+  opacity: 1;
+  left: 0;
+  -webkit-transform: rotate(0deg);
+  -moz-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+  -webkit-transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -o-transition: .25s ease-in-out;
+  transition: .25s ease-in-out;
+  z-index: 5;
+}
+/* Icon 3 */
+
+#nav-icon3 span:nth-child(1) {
+  top: 0px;
+}
+
+#nav-icon3 span:nth-child(2),#nav-icon3 span:nth-child(3) {
+  top: 13px;
+}
+
+#nav-icon3 span:nth-child(4) {
+  top: 26px;
+}
+
+#nav-icon3.open span:nth-child(1) {
+  top: 18px;
+  width: 0%;
+  left: 50%;
+}
+
+#nav-icon3.open span:nth-child(2) {
+  -webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -o-transform: rotate(45deg);
+  transform: rotate(45deg);
+  z-index: 5;
+  background-color: #fff;
+}
+
+#nav-icon3.open span:nth-child(3) {
+  -webkit-transform: rotate(-45deg);
+  -moz-transform: rotate(-45deg);
+  -o-transform: rotate(-45deg);
+  transform: rotate(-45deg);
+  z-index: 5;
+  background-color: #fff;
+}
+
+#nav-icon3.open span:nth-child(4) {
+  top: 18px;
+  width: 0%;
+  left: 50%;
+  z-index: 5;
+  background-color: #fff;
+}
+
+.checkbox{
+  display: none;
+}
+
+/* fin Hamburguesa */
+
+.menu_ul{
   display: flex;
   justify-content: space-between;
 }
@@ -350,4 +442,73 @@ footer{
 .social_icons{
   font-size: 35px;
   margin-left: 15px;
+}
+
+@media (max-width: 990px){
+  
+  #home{
+    height: 60vh;
+  }
+
+  @media (orientation: landscape) {
+    #home{
+      height: 90vh;
+    }
+  }
+
+  #home div{
+    text-align: center;
+  }
+
+  .image-big1{
+    display: none;
+  }
+
+  .pre_features{
+    display: initial;
+  }
+
+  .features_img{
+    margin-bottom: 30px;
+  }
+
+  .pre_features:nth-child(2){
+    text-align: center;
+  }
+
+  #nav-icon3{
+    display: block;
+  }
+
+  .menu{
+    display: none;
+  }
+
+  .contact_info{
+    margin-top: 20px;
+    margin-left: initial;
+  }
+
+  #contactanos{
+    height: 900px;
+  }
+}
+@media (max-width: 600px){
+  #home{
+    height: 90vh;
+  }
+
+  .frase-home h2{
+    font-size: 24px;
+  }
+
+  .carousel_images img{
+    max-width: 70%;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  #contactanos{
+    height: 900px;
+  }
 }
