--- a/css/style.css
+++ b/css/style.css
@@ -344,6 +344,10 @@
   margin-top: 15px;
 }
 
+#testimonios{
+  background-color: var(--niebla); 
+}
+
 .testimonios_frase{
   font-size: 20px;
   color: var(--negro);
@@ -364,11 +368,6 @@
   max-width: 120px;
   margin-right: auto;
   margin-left: auto;
-}
-
-#contactanos{
-  background-color: var(--niebla); 
-  height: 750px;
 }
 
 .form_input{
