--- a/css/style.css
+++ b/css/style.css
@@ -233,10 +233,6 @@
   background-color: #fff;
 }
 
-.checkbox{
-  display: none;
-}
-
 /* fin Hamburguesa */
 
 .menu_ul{
@@ -301,6 +297,14 @@
 .feature_text{
   color: var(--gris);
   font-size: 16px;
+}
+
+.icons_steps{
+  transition: all 0.3s ease-out;
+}
+
+.icons_steps:hover{
+  width: 110px;
 }
 
 #caracteristicas{
@@ -441,73 +445,4 @@ footer{
 .social_icons{
   font-size: 35px;
   margin-left: 15px;
-}
-
-@media (max-width: 990px){
-  
-  #home{
-    height: 60vh;
-  }
-
-  @media (orientation: landscape) {
-    #home{
-      height: 90vh;
-    }
-  }
-
-  #home div{
-    text-align: center;
-  }
-
-  .image-big1{
-    display: none;
-  }
-
-  .pre_features{
-    display: initial;
-  }
-
-  .features_img{
-    margin-bottom: 30px;
-  }
-
-  .pre_features:nth-child(2){
-    text-align: center;
-  }
-
-  #nav-icon3{
-    display: block;
-  }
-
-  .menu{
-    display: none;
-  }
-
-  .contact_info{
-    margin-top: 20px;
-    margin-left: initial;
-  }
-
-  #contactanos{
-    height: 900px;
-  }
-}
-@media (max-width: 600px){
-  #home{
-    height: 90vh;
-  }
-
-  .frase-home h2{
-    font-size: 24px;
-  }
-
-  .carousel_images img{
-    max-width: 70%;
-    margin-left: auto;
-    margin-right: auto;
-  }
-
-  #contactanos{
-    height: 900px;
-  }
 }
