--- a/css/media-queries.css
+++ b/css/media-queries.css
@@ -17,6 +17,11 @@
     #contactanos{
       height: 900px;
     }
+
+    .form{
+      margin-left: 20px;
+      margin-right: 20px;
+    }
   }
   
   
