--- a/css/style.css
+++ b/css/style.css
@@ -149,91 +149,13 @@
   color: var(--melon);
 }
 
-/* Menu Hamburguesa */
-
-#nav-icon3 {
-  width: 45px;
-  height: 35px;
-  position: relative;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: .5s ease-in-out;
-  -moz-transition: .5s ease-in-out;
-  -o-transition: .5s ease-in-out;
-  transition: .5s ease-in-out;
-  cursor: pointer;
-  z-index: 5;
-  display: none;
+.navbar-dark .navbar-toggler{
+  border-color: #fff !important; 
 }
 
-#nav-icon3 span {
-  display: block;
-  position: absolute;
-  height: 6px;
-  width: 100%;
-  background: #fff;
-  border-radius: 4px;
-  opacity: 1;
-  left: 0;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: .25s ease-in-out;
-  -moz-transition: .25s ease-in-out;
-  -o-transition: .25s ease-in-out;
-  transition: .25s ease-in-out;
-  z-index: 5;
+.navbar-dark .navbar-nav .nav-link{
+  color: #fff !important;
 }
-/* Icon 3 */
-
-#nav-icon3 span:nth-child(1) {
-  top: 0px;
-}
-
-#nav-icon3 span:nth-child(2),#nav-icon3 span:nth-child(3) {
-  top: 13px;
-}
-
-#nav-icon3 span:nth-child(4) {
-  top: 26px;
-}
-
-#nav-icon3.open span:nth-child(1) {
-  top: 18px;
-  width: 0%;
-  left: 50%;
-}
-
-#nav-icon3.open span:nth-child(2) {
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  transform: rotate(45deg);
-  z-index: 5;
-  background-color: #fff;
-}
-
-#nav-icon3.open span:nth-child(3) {
-  -webkit-transform: rotate(-45deg);
-  -moz-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-  z-index: 5;
-  background-color: #fff;
-}
-
-#nav-icon3.open span:nth-child(4) {
-  top: 18px;
-  width: 0%;
-  left: 50%;
-  z-index: 5;
-  background-color: #fff;
-}
-
-/* fin Hamburguesa */
 
 .menu_ul{
   display: flex;
@@ -249,6 +171,7 @@
   color: #fff;
   font-size: 34px;
   margin-bottom: 20px;
+  line-height: 54px;
 }
 
 .callToAction{
@@ -280,6 +203,7 @@
 .subtitle{
   color: var(--negro);
   font-size: 32px;
+  font-weight: bold;
 }
 
 .subtitle-text{
@@ -292,6 +216,7 @@
   color: var(--negro);
   font-size: 24px;
   line-height: 34px;
+  font-weight: bold;
 }
 
 .feature_text{
@@ -433,6 +358,7 @@ footer{
 .footer h4{
   color: #fff;
   font-weight: 500;
+  font-size: 16px;
 }
 
 .footer_social{
